multi: add internal key to anchor info
